feat email and profile service 🥀
